[gd_scene load_steps=7 format=3 uid="uid://bdtkc2y5x70v3"]

[ext_resource type="StyleBox" uid="uid://yivtfpayypbe" path="res://Assets/Styles/Window/ToolWindow.tres" id="1_m1lwt"]
[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_opjot"]
[ext_resource type="Texture2D" uid="uid://cg0koet6pa2ip" path="res://Assets/Styles/Window/CloseBtn.png" id="2_cie6y"]
[ext_resource type="AudioStream" uid="uid://5hpclfmlks3n" path="res://Assets/Sounds/move1.ogg" id="4_t5xu0"]
[ext_resource type="AudioStream" uid="uid://g6acn6voktqu" path="res://Assets/Sounds/move2.ogg" id="5_8t45h"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4y3b5"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("4_t5xu0")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_8t45h")
stream_1/weight = 1.0

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opjot")

[node name="Settings" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 500)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 576.0
offset_top = -508.0
offset_right = 1376.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("1_m1lwt")

[node name="Borders" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Layout" type="VBoxContainer" parent="Settings/Borders"]
layout_mode = 2

[node name="Button" type="Button" parent="Settings/Borders/Layout"]
layout_mode = 2
text = "Resetovat"

[node name="Label2" type="Label" parent="Settings/Borders/Layout"]
layout_mode = 2
text = "Hlasitost zvukových efektů"

[node name="EffectVolume" type="HSlider" parent="Settings/Borders/Layout"]
layout_mode = 2
min_value = -80.0
max_value = 24.0

[node name="Label" type="Label" parent="Settings/Borders/Layout"]
layout_mode = 2
text = "Hlasitost hudby"

[node name="MusicVolume" type="HSlider" parent="Settings/Borders/Layout"]
layout_mode = 2
min_value = -80.0
max_value = 24.0

[node name="Header" type="MarginContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 19.0
grow_horizontal = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 2

[node name="Close" type="Button" parent="Settings/Header"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("2_cie6y")
flat = true

[node name="Title" type="Label" parent="Settings/Header"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Nastavení"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_4y3b5")

[connection signal="drag_ended" from="Settings/Borders/Layout/EffectVolume" to="." method="_on_effect_volume_drag_ended"]
[connection signal="value_changed" from="Settings/Borders/Layout/EffectVolume" to="." method="_on_effect_volume_value_changed"]
[connection signal="value_changed" from="Settings/Borders/Layout/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="Settings/Header/Close" to="." method="close_menu"]
